# Wallet-OS

./: .gitignore  ARCHITECTURE_V2.md  Cargo.toml  DESIGN_DOC.md  Dockerfile  README.md  docker-compose.yml
logs/: wallet-os.log.2025-12-22  wallet-os.log.2025-12-23
src/: db.rs  handlers.rs  main.rs  models.rs
static/: index.html  prompts.json  style.css
