[package]
name = "wallet-os"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时，用于处理并发任务
# Asynchronous runtime for handling concurrent tasks
tokio = { version = "1.0", features = ["full"] }

# Web 框架，用于构建 HTTP 服务器
# Web framework for building HTTP servers
axum = { version = "0.7", features = ["macros"] }

# 数据库连接库，支持 SQLite 和异步操作
# Database connection library, supporting SQLite and async operations
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

# 序列化和反序列化框架
# Serialization and deserialization framework
serde = { version = "1.0", features = ["derive"] }

# JSON 处理库
# JSON handling library
serde_json = "1.0"

# HTTP 服务组件，提供静态文件服务和 CORS 支持
# HTTP service components, providing static file serving and CORS support
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression-gzip", "compression-br", "compression-deflate", "compression-zstd"] }

# 日志追踪库
# Logging and tracing library
tracing = "0.1"

# 标准日志库，用于 sqlx 的日志级别配置
# Standard logging library, used for sqlx log level configuration
log = "0.4"

# 日志订阅者，用于格式化日志输出
# Log subscriber for formatting log output
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 日志文件追加器，用于将日志写入文件
# Log file appender, used to write logs to files
tracing-appender = "0.2"

# 时间处理库
# Date and time handling library
chrono = { version = "0.4", features = ["serde"] }

# HTTP 客户端，用于后端联网搜索 (解决跨域问题)
# HTTP client for backend online search (resolving CORS issues)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# HTML 解析器，用于提取搜索结果中的真实链接
# HTML parser for extracting real links from search results
scraper = "0.18"

# URL 编码库，用于处理搜索参数
# URL encoding library for handling search parameters
urlencoding = "2.1"
# URL 解析库
# URL parsing library
url = "2.5"
once_cell = "1.19"
parking_lot = "0.12"
